--- a/packages/zitadel-client/package.json
+++ b/packages/zitadel-client/package.json
@@ -34,7 +34,12 @@
     "typescript": "^4.9.3"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://npm.pkg.github.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/shubhamranjan/zitadel-ts.git"
   },
   "dependencies": {
     "jose": "^4.13.1",
