--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,9 @@ jobs:
           node-version: 20
 
       - name: Install Dependencies
-        run: yarn install
+        run: |
+          corepack enable
+          yarn install
 
       - name: Create Release Pull Request
         uses: changesets/action@v1
