--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,9 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          npm install
+          pnpm install
+          pnpm generate
+          pnpm build
 
       - name: Create Release Pull Request
         uses: changesets/action@v1
