--- a/apps/login/package.json
+++ b/apps/login/package.json
@@ -36,9 +36,9 @@
     "@heroicons/react": "2.0.13",
     "@tailwindcss/forms": "0.5.3",
     "@vercel/analytics": "^1.0.0",
-    "@zitadel/client": "workspace:*",
-    "@zitadel/react": "workspace:*",
-    "@zitadel/server": "workspace:*",
+    "@zitadel/client": "file: *",
+    "@zitadel/react": "file: *",
+    "@zitadel/server": "file: *",
     "clsx": "1.2.1",
     "moment": "^2.29.4",
     "next": "13.4.12",
@@ -65,13 +65,13 @@
     "@types/tinycolor2": "1.4.3",
     "@types/uuid": "^9.0.1",
     "@vercel/git-hooks": "1.0.0",
-    "@zitadel/tsconfig": "workspace:*",
+    "@zitadel/tsconfig": "file: *",
     "autoprefixer": "10.4.13",
     "concurrently": "^8.1.0",
     "cypress": "^12.14.0",
     "del-cli": "5.0.0",
     "env-cmd": "^10.1.0",
-    "eslint-config-zitadel": "workspace:*",
+    "eslint-config-zitadel": "file: *",
     "grpc-tools": "1.11.3",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
@@ -87,6 +87,6 @@
     "ts-node": "^10.9.1",
     "ts-proto": "^1.139.0",
     "typescript": "5.0.4",
-    "zitadel-tailwind-config": "workspace:*"
+    "zitadel-tailwind-config": "file: *"
   }
 }
