--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
     "eslint": "^8.56.0",
-    "eslint-config-zitadel": "workspace:*",
+    "eslint-config-zitadel": "file: *",
     "prettier": "^3.2.4",
     "turbo": "^1.11.3"
   },
