--- a/packages/zitadel-client/package.json
+++ b/packages/zitadel-client/package.json
@@ -23,9 +23,9 @@
   "devDependencies": {
     "@bufbuild/buf": "^1.28.1",
     "@types/jest": "^29.5.11",
-    "@zitadel/tsconfig": "workspace:*",
+    "@zitadel/tsconfig": "file: *",
     "eslint": "^8.56.0",
-    "eslint-config-zitadel": "workspace:*",
+    "eslint-config-zitadel": "file: *",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
