--- a/packages/zitadel-next/package.json
+++ b/packages/zitadel-next/package.json
@@ -22,9 +22,9 @@
   "devDependencies": {
     "@types/jest": "^29.5.1",
     "@types/react": "^17.0.13",
-    "@zitadel/tsconfig": "workspace:*",
+    "@zitadel/tsconfig": "file: *",
     "eslint": "^7.32.0",
-    "eslint-config-zitadel": "workspace:*",
+    "eslint-config-zitadel": "file: *",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
@@ -32,12 +32,12 @@
     "typescript": "^4.9.3",
     "tailwindcss": "3.2.4",
     "postcss": "8.4.21",
-    "zitadel-tailwind-config": "workspace:*",
-    "@zitadel/server": "workspace:*"
+    "zitadel-tailwind-config": "file: *",
+    "@zitadel/server": "file: *"
   },
   "peerDependencies": {
-    "@zitadel/react": "workspace:*",
-    "@zitadel/server": "workspace:*",
+    "@zitadel/react": "file: *",
+    "@zitadel/server": "file: *",
     "next": "^13",
     "react": "18.2.0"
   },
