--- a/packages/zitadel-react/package.json
+++ b/packages/zitadel-react/package.json
@@ -29,10 +29,10 @@
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
     "@types/testing-library__jest-dom": "^5.14.6",
-    "@zitadel/tsconfig": "workspace:*",
+    "@zitadel/tsconfig": "file: *",
     "autoprefixer": "10.4.13",
     "eslint": "^7.32.0",
-    "eslint-config-zitadel": "workspace:*",
+    "eslint-config-zitadel": "file: *",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "postcss": "8.4.21",
@@ -42,7 +42,7 @@
     "ts-node": "^10.9.1",
     "tsup": "^7.1.0",
     "typescript": "^5.1.6",
-    "zitadel-tailwind-config": "workspace:*"
+    "zitadel-tailwind-config": "file: *"
   },
   "publishConfig": {
     "access": "public"
