--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,5 +7,5 @@
   "linked": [],
   "access": "public",
   "updateInternalDependencies": "patch",
-  "ignore": []
+  "ignore": ["@zitadel/next","@zitadel/react", "zitadel-tailwind-config"]
 }
