--- a/packages/zitadel-tsconfig/package.json
+++ b/packages/zitadel-tsconfig/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "license": "MIT",
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://npm.pkg.github.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/shubhamranjan/zitadel-ts.git"
   }
 }
