--- a/packages/zitadel-next/package.json
+++ b/packages/zitadel-next/package.json
@@ -42,7 +42,12 @@
     "react": "18.2.0"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://npm.pkg.github.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/shubhamranjan/zitadel-ts.git"
   },
   "dependencies": {
     "next": "^13.4.10"
