--- a/packages/zitadel-react/package.json
+++ b/packages/zitadel-react/package.json
@@ -45,7 +45,12 @@
     "zitadel-tailwind-config": "file: *"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://npm.pkg.github.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/shubhamranjan/zitadel-ts.git"
   },
   "peerDependencies": {
     "react": "18.2.0"
