--- a/packages/zitadel-client/package.json
+++ b/packages/zitadel-client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@shubhamranjan/zitadel-client",
+  "name": "@zitadel/client",
   "version": "0.0.0",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
