--- a/packages/zitadel-next/package.json
+++ b/packages/zitadel-next/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@shubhamranjan/zitadel-next",
+  "name": "@zitadel/next",
   "version": "0.0.0",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
