--- a/apps/login/package.json
+++ b/apps/login/package.json
@@ -36,9 +36,9 @@
     "@heroicons/react": "2.0.13",
     "@tailwindcss/forms": "0.5.3",
     "@vercel/analytics": "^1.0.0",
-    "@zitadel/client": "file: *",
-    "@zitadel/react": "file: *",
-    "@zitadel/server": "file: *",
+    "@shubhamranjan/zitadel-client": "file: *",
+    "@shubhamranjan/zitadel-react": "file: *",
+    "@shubhamranjan/zitadel-server": "file: *",
     "clsx": "1.2.1",
     "moment": "^2.29.4",
     "next": "13.4.12",
