--- a/apps/login/tsconfig.json
+++ b/apps/login/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@zitadel/tsconfig/nextjs.json",
+  "extends": "@shubhamranjan/zitadel-tsconfig/nextjs.json",
   "compilerOptions": {
     "jsx": "preserve",
     "rootDir": ".",
