--- a/packages/eslint-config-zitadel/package.json
+++ b/packages/eslint-config-zitadel/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-config-zitadel",
+  "name": "@shubhamranjan/eslint-config-zitadel",
   "version": "0.0.0",
   "main": "index.js",
   "license": "MIT",
