--- a/packages/zitadel-server/tsconfig.json
+++ b/packages/zitadel-server/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@zitadel/tsconfig/node14.json",
+  "extends": "@shubhamranjan/zitadel-tsconfig/node14.json",
   "include": ["src/**/*.ts"],
   "compilerOptions": {
     "baseUrl": ".",
