--- a/packages/zitadel-tailwind-config/package.json
+++ b/packages/zitadel-tailwind-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zitadel-tailwind-config",
+  "name": "@shubhamranjan/zitadel-tailwind-config",
   "version": "0.0.0",
   "private": true,
   "main": "index.js",
