--- a/packages/zitadel-tsconfig/package.json
+++ b/packages/zitadel-tsconfig/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@zitadel/tsconfig",
+  "name": "@shubhamranjan/zitadel-tsconfig",
   "version": "0.0.0",
   "private": true,
   "license": "MIT",
